rust/crates/dsl-core/tests/snapshots/ast_golden__ast_view_universe.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 232
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "view",
                verb: "universe",
                arguments: [],
                binding: None,
                span: Span {
                    start: 0,
                    end: 15,
                },
            },
        ),
    ],
}
